feat: 각 컴포넌트마다 UI 간단하게 구현하기
* Home
  - 이름 소개

* About
  - 나를 표현하기

* Experience
  - 개발 경력이 없어서 대학교 이후부터의 경험을 기록

* Skills
  - 현재 다룰 수 있는 기술들

* Projects
  - 공부하면서 진행해본 토이프로젝트

* Contact
  - 연락할 수 있는 다양한 방법들

2023.07.14

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -30,25 +30,39 @@
 }
 
 .home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgb(182, 236, 218);
 }
 
 .experience {
+  display: flex;
+  justify-content: center;
   background-color: rgb(241, 210, 215);
 }
 
 .about {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgb(246, 220, 173);
 }
 
 .skills {
+  display: flex;
+  justify-content: center;
   background-color: rgb(188, 194, 236);
 }
 
 .projects {
+  display: flex;
+  justify-content: center;
   background-color: rgb(234, 152, 152);
 }
 
 .contact {
+  display: flex;
+  justify-content: center;
   background-color: rgb(235, 155, 235);
 }
