--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,5 @@
 .section {
   width: 100%;
-  height: 100vh;
 }
 
 .section h1 {
@@ -8,6 +7,7 @@
 }
 
 .nav {
+  z-index: 100;
   position: fixed;
   top: 0;
   left: 0;
@@ -15,6 +15,7 @@
   display: flex;
   justify-content: space-between;
   padding: 10px;
+  color: white;
 }
 
 .logo {
@@ -29,12 +30,13 @@
   margin: 10px;
 }
 
-.home {
+/* .home {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: rgb(182, 236, 218);
-}
+} */
 
 .experience {
   display: flex;
