--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,3 +1,127 @@
-.h1 {
-  font-size: 100px;
+.fix_motion {
+  position: relative;
+  height: 5000px;
+}
+
+.sticky_cont {
+  overflow: hidden;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+.cont_box {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+}
+
+.intro_txt {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 60;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transition: opacity 1s;
+}
+
+.intro_txt h1 {
+  font-size: 80px;
+  line-height: 1;
+  color: #fff;
+}
+
+.intro_txt.active {
+  opacity: 0;
+}
+
+.left_mask {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 50;
+  width: 50%;
+  height: 100%;
+  background: #000;
+}
+
+.right_mask {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 50;
+  width: 50%;
+  height: 100%;
+  background: #000;
+}
+
+.ending_txt {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 30;
+  width: 100%;
+  height: 100%;
+  color: white;
+  opacity: 0;
+  transition: opacity 1;
+}
+
+.ending_txt:after {
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 1);
+  content: '';
+}
+
+.ending_txt.active {
+  opacity: 1;
+}
+
+.tb_row {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+
+.tb_cell {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.tb_cell p {
+  font-size: 80px;
+  color: black;
+  line-height: 1;
+}
+
+.bg_img_wrapper img {
+  position: absolute;
+  left: 24%;
+  z-index: 20;
+  width: 55%;
+  height: 110%;
+  background-size: auto 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.bg_img {
 }
