feat: About 섹션, strong 태그별로 이미지 다르게 렌더링
* strong 태그에 hover
  - 총 4개의 strong 태그가 있다. 각 태그에 hover시 각기 다른 이미지를
  보여준다.

2023.07.16

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -45,9 +45,11 @@
 }
 
 .about {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100vh;
   background-color: rgb(246, 220, 173);
 }
 
