--- a/src/components/Experience.module.css
+++ b/src/components/Experience.module.css
@@ -1,9 +1,10 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 60%;
   height: 70%;
-  margin-top: 6+-0px;
-  padding: 20px 40px 20px 20px;
-  overflow-y: scroll;
+  margin-top: 60px;
 }
 
 .container h1 {
@@ -12,13 +13,19 @@
 
 .container ul {
   margin-top: -20px;
+  padding: 20px;
   list-style: none;
+  overflow-y: scroll;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.container ul::-webkit-scrollbar {
+  width: 0.5em;
 }
 
 .container ul li {
   display: flex;
   align-items: center;
-  /* justify-content: space-between; */
   padding-bottom: 10px;
   border-bottom: 0.5px solid gray;
 }
