--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -1,4 +1,7 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 90%;
   margin-top: 20px;
 }
@@ -9,15 +12,37 @@
 
 .projectsContainer {
   display: flex;
+  justify-content: center;
+  width: 85%;
+  margin-top: 50px;
 }
 
 .list {
   width: 70%;
-  margin-left: 50px;
+  margin: 20px 0 0 100px;
+}
+
+.list h2 {
+  font-size: 30px;
+}
+
+.list p {
+  font-size: 20px;
+  line-height: 1.7;
+  color: rgb(70, 68, 68);
+}
+
+.list a {
+  outline: none;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  font-size: 40px;
+  color: black;
 }
 
 .img {
-  width: 400px;
-  height: 400px;
+  width: 600px;
+  height: 600px;
   border: 1px solid black;
 }
