feat: Contact 섹션 - 이미지, 전체적으로 중앙 정렬
* 이미지
  - Contact 섹션 페이지 전체가 밋밋해보여서 이미지 추가

* 중앙 정렬
  - 이미지를 추가하면서 전체적으로 중앙 정렬

2023.07.17

--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -7,7 +7,15 @@
   font-size: 40px;
 }
 
+.listWrapper {
+  display: flex;
+}
+
 .list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin-left: 100px;
   width: 90%;
 }
 
@@ -25,4 +33,10 @@
 .list div div {
   width: 80%;
   font-size: 20px;
+}
+
+.list a {
+  margin: 20px;
+  text-decoration: none;
+  color: black;
 }
