--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -36,6 +36,47 @@
   color: rgb(242, 6, 234, 0.6);
 }
 
+.navList {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  width: 400px;
+  height: 100vh;
+  padding: 10px;
+  margin-right: -550px;
+  background-color: rgb(206, 155, 235);
+  transition: margin 0.7s ease-in-out;
+}
+
+.navList.active {
+  margin: 0px;
+}
+
+.navList ul {
+  z-index: 9000;
+}
+
+.navList ul li {
+  list-style: none;
+  font-size: 40px;
+  margin-top: 30px;
+}
+
+.navList ul li a {
+  text-decoration: none;
+  color: black;
+}
+
+.navList ul li a:hover {
+  color: white;
+}
+
+.closeBtn {
+  margin: 50px 0 30px 50px;
+  cursor: pointer;
+  font-size: 30px;
+}
+
 .toggle {
   margin: 10px 30px 10px 0;
 }
