--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -95,6 +95,14 @@
   margin: 10px;
 }
 
+.percent {
+  position: fixed;
+  z-index: 1000;
+  width: 0%;
+  height: 5px;
+  background-color: rgb(114, 214, 199);
+}
+
 /* .home {
   display: flex;
   flex-direction: column;
