style: 네비게이션 이메일 아이콘 스타일링, contact 페이지 스타일링
* 네비게이션 이메일 아이콘 스타일링
  - 이메일을 따로 클라이언트 컴포넌트로 빼주었기 때문에 스타일링을 따로 해주어야 하는 상황이라
  prop으로 스타일을 전달해서 해결했다.

* contact 페이지 스타일링
  - 전체에 적용할 스타일링과 이메일에 부분적으로 적용할 스타일을 달리 적용했다.

2023.07.18

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -36,6 +36,13 @@
   color: rgb(242, 6, 234, 0.6);
 }
 
+.email {
+  display: inline-block;
+  font-size: 40px;
+  margin-left: 10px;
+  margin-right: 20px;
+}
+
 .navList {
   position: fixed;
   right: 0;
