--- a/src/components/Experience.module.css
+++ b/src/components/Experience.module.css
@@ -9,6 +9,7 @@
 
 .container h1 {
   font-size: 40px;
+  color: #1f1c1c;
 }
 
 .container ul {
@@ -27,13 +28,13 @@
   display: flex;
   align-items: center;
   padding-bottom: 10px;
-  border-bottom: 0.5px solid gray;
+  border-bottom: 0.5px solid #1f1c1c;
 }
 
 .container ul li div {
   width: 20%;
   font-size: 12px;
-  color: gray;
+  color: #1f1c1c;
 }
 
 .container ul li h2 {
@@ -41,9 +42,10 @@
   font-size: 20px;
   align-items: left;
   text-align: left;
+  color: #1f1c1c;
 }
 
 .container ul li p {
   width: 40%;
-  color: rgb(169, 165, 165);
+  color: rgba(169, 165, 165, 0.899);
 }
