--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -34,8 +34,8 @@
 
 .intro_txt h1 {
   font-size: 80px;
-  line-height: 1;
-  color: #fff;
+  line-height: 1.5;
+  color: #b0b6b9d4;
 }
 
 .intro_txt.active {
@@ -49,7 +49,7 @@
   z-index: 50;
   width: 50%;
   height: 100%;
-  background: #000;
+  background: #1f1c1c;
 }
 
 .right_mask {
@@ -59,7 +59,7 @@
   z-index: 50;
   width: 50%;
   height: 100%;
-  background: #000;
+  background: #1f1c1c;
 }
 
 .ending_txt {
@@ -81,7 +81,7 @@
   z-index: -1;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 1);
+  background: #5b656b;
   content: '';
 }
 
@@ -103,8 +103,8 @@
 
 .tb_cell p {
   font-size: 80px;
-  color: black;
-  line-height: 1;
+  color: rgba(255, 255, 255, 0.685);
+  line-height: 1.5;
 }
 
 .bg_img_wrapper img {
